# ChangeLog for app-text/pdfedit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 May 2007; Pavel Sanda (ps) <ps at twin.jikos.cz> pdfedit-0.3.1.ebuild:
  app-text/pdfedit: url comestics

  01 May 2007; Ali Polatel (hawking) <polatel@gmail.com>
  pdfedit-0.3.1.ebuild:
  Add trailing slash to HOMEPAGE, cosmetics

  01 May 2007; Pavel Sanda (ps) <ps at twin.jikos.cz> -pdfedit-0.3.0.ebuild,
  +pdfedit-0.3.1.ebuild:
  app-text/pdfedit 0.3.1 version bump

  18 Apr 2007; Markus Ullmann <jokey@gentoo.org>
  -files/pdfedit-0.2.3-build-fix.patch, -pdfedit-0.2.5.ebuild,
  pdfedit-0.3.0.ebuild:
  Drop old and some cosmetics

  17 Apr 2007; Pavel Sanda (ps) <ps at twin.jikos.cz> +pdfedit-0.2.5.ebuild:
  app-text/pdfedit 0.3.0 version bump
  
  12 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  -pdfedit-0.2.3.ebuild:
  removed stray digest and old ebuild

  09 Feb 2007; Pavel Sanda (ps) <ps at twin.jikos.cz> -pdfedit-0.2.4.ebuild,
  +pdfedit-0.2.5.ebuild:
  app-text/pdfedit 0.2.5 version bump

  04 Feb 2007; Pavel Sanda (ps) <ps at twin.jikos.cz> +pdfedit-0.2.4.ebuild:
  app-text/pdfedit 0.2.4 version bump

  23 Dec 2006; Pavel Sanda (ps) <ps at twin.jikos.cz> +pdfedit-0.2.3.ebuild,
  +files/pdfedit-0.2.3-build-fix.patch, +metadata.xml:
  New Ebuild for bug 158188.
