@@ -1,4 +1,4 @@
-DIST pdfedit-0.3.1.tar.gz 3043138 RMD160 c02394d1bd20c5e15b156cef5996299d634e4a27 SHA1 7f66c4f5535a742e1d52ba685553c4e6d33a7ee2 SHA256 75f8e61812aa0a5cc9149c976f8d64d694d987cecf616e27715ba864be9f857f
-EBUILD pdfedit-0.3.1.ebuild 597 RMD160 949e882febd057b046ad350890998da9f96a76a7 SHA1 cc943085c05ba4bb9006794f7bca1a96d38f5060 SHA256 7a924d6e942bf071e467288d7e0eb69d8e5463891de57de02929aa373b4996fd
-MISC ChangeLog 1318 RMD160 1cf1be15e167239788129e294e1e526a6900ad44 SHA1 c6d880cf0ab90bd73f82885b55b4a3024e44376f SHA256 e2480a23c0211c0f79847a6d684398b94a8b64f4c0d5d865f571065a263cf5b1
+DIST pdfedit-0.3.2.tar.gz 3440668 RMD160 41a00a1425892b800ea5d48e76b413086f2e276f SHA1 eb2cda8c95b3deaf6232c4b8a6577bf33078b830 SHA256 cce1f2471b176d40f5dc9f87448d33b9e0310c35dcfdefbd3773cd9703495f6e
+EBUILD pdfedit-0.3.2.ebuild 615 RMD160 2e80f54973a7e1e882b3d05c006dc3b8da891838 SHA1 66857c0711f4fc466815a27964bbe70494ac30ef SHA256 ed93fdd2fac56befa8bf18c5aa57064458d63b5c1821987e5569def4be610269
+MISC ChangeLog 1450 RMD160 33cbd1a704d1692a206191273a370f0ebf0ff077 SHA1 126d8271310882c0b856279a6e572f22e80bc7f8 SHA256 b43f6e8515c20e8d3137849609a70304192c9059278992a533330bb14a3638a7
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
