@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Sep 2007; Markus Ullmann <jokey@gentoo.org> -pdfedit-0.3.1.ebuild,
+  +pdfedit-0.3.2.ebuild:
+  Version bump as reported on irc
+
   02 May 2007; Pavel Sanda (ps) <ps at twin.jikos.cz> pdfedit-0.3.1.ebuild:
   app-text/pdfedit: url comestics
 
